<resources>
    <string name="app_name">SBOX</string>

    <string name="home">Home</string>
    <string name="daily">Daily</string>
    <string name="ranking">Ranking</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="giftbox">GiftBox</string>



    <string name="go">Go</string>
    <string name="share">Share</string>
    <string name="read">Read</string>
    <string name="receive">Receive</string>
    <string name="guest">Guest</string>
    <string name="expires">Expires</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="cancel">Cancel</string>
    <string name="account">Account</string>




</resources>
