<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/daily" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/ranking" />

    <item
        android:id="@+id/navigation_bookshelf"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/ranking" />

    <item
        android:id="@+id/navigation_giftbox"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/giftbox" />

</menu>
