<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.comico.ui.main.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_recyclerview_refresh" />

    <fragment
        android:id="@+id/navigation_daily"
        android:name="io.comico.ui.main.home.HomeFragment"
        android:label="@string/daily"
        tools:layout="@layout/fragment_recyclerview_refresh" />

    <fragment
        android:id="@+id/navigation_ranking"
        android:name="io.comico.ui.main.home.HomeFragment"
        android:label="@string/ranking"
        tools:layout="@layout/fragment_recyclerview_refresh" />

    <fragment
        android:id="@+id/navigation_bookshelf"
        android:name="io.comico.ui.main.home.HomeFragment"
        android:label="@string/bookshelf"
        tools:layout="@layout/fragment_recyclerview_refresh" />

    <fragment
        android:id="@+id/navigation_giftbox"
        android:name="io.comico.ui.main.home.HomeFragment"
        android:label="@string/giftbox"
        tools:layout="@layout/fragment_recyclerview_refresh" />
</navigation>